<resources>
    <string name="app_name">SWCC Club App</string>
    <string name="club_chat">Club Chat</string>
    <string name="action_strava">Strava</string>
    <string name="action_strava_activities">Club Group Activities</string>
    <string name="action_strava_segments">Segment Efforts</string>
    <string name="action_addBlog">Add News</string>
    <string name="action_viewAllBlog">View All News</string>
    <string name="action_viewMyBlog">View My News</string>
    <string name="action_report2">My Blog Posts</string>
    <string name="reportTitle">Strava Club Members</string>
    <string name="blogreportTitle">Blog</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SWCC Club App</string>
    <string name="nav_header_subtitle">sportifwaterfordcc@gmail.com</string>
    <string name="nav_header_name">User Name Here</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_chat">Add Message</string>
    <string name="menu_blog">Add Post</string>
    <string name="menu_bloglist">My Blog Posts</string>
    <string name="menu_bloglist_all">All Blog Posts</string>

    <string name="strava_menu">Strava</string>
    <string name="menu_chat">Club Chat</string>
    <string name="menu_news">Club News</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="chat_title">SWCC Club Chat</string>
    <string name="news_title">SWCC Club News</string>
    <string name="welcome_title">SWCC Club App</string>
    <string name="news_message">All Club News Will Be Here!</string>
    <string name="chat_message">Hope to get a chat page here!</string>

    <string name="messageLoading">Please Wait while Strava is contacted...</string>

    <string name="action_view">View Blog Post</string>
    <string name="action_edit">Edit Blog Post</string>
    <string name="action_update">Update Blog Post</string>
    <string name="message_edit">Please Update your Details Below</string>
    <string name="action_post">Add Blog Post</string>
    <string name="action_profile">Edit Profile Details</string>
    <string name="editProfileImage">Update Image</string>
    <string name="editProfileName">Save Profile Details</string>
    <string name="resetPassword">Reset Password</string>
    <string name="deleteUserText">Delete User</string>
    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!--END Firebase Resources-->

    <string name="postButton">Add Post</string>
    <string name="news">News</string>
    <string name="spins">Spins</string>
    <string name="select_image">Select Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_message">Welcome</string>


</resources>
