<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.blog.EditFragment">

    <ImageView
        android:id="@+id/editBlogImage"
        android:layout_width="400dp"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <EditText
        android:id="@+id/editBody"
        android:layout_width="360dp"
        android:layout_height="181dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="360dp"
        android:layout_height="49dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBlogImage" />

    <TextView
        android:id="@+id/editDate"
        android:layout_width="343dp"
        android:layout_height="30dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <RadioGroup
        android:id="@+id/editPostType"
        android:layout_width="103dp"
        android:layout_height="59dp"


        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"

        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editBody">

        <RadioButton
            android:id="@+id/editNews"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/news" />

        <RadioButton
            android:id="@+id/editSpins"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/spins" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:text="Post Type :"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBody" />

    <Button
        android:id="@+id/editUpdateButton"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:text="@string/action_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>